Use Structured Concurrency for executeSearch()